# todo-serverless-scaleway

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  build-add.dockerfile  build-delete.dockerfile  build-edit.dockerfile  build-get-all.dockerfile  build-get.dockerfile  build-update.dockerfile  docker-compose.yaml
.github/copilot/: architecture-documentation.agent.md  diagrams-architect.skill.md
iac/: main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infrastructure/: docker-compose.yaml
infrastructure/http/: todos-cloud.http  todos-local.http
infrastructure/postgres/: Dockerfile  init.sql
todo-api/: Cargo.toml
todo-api/src/models/: mod.rs
todo-api/src/repository/: todo_repository.rs
todo-api/src/service/: faas_service.rs  mod.rs  todo_service.rs
todo-ui/: Cargo.toml
todo-ui/src/: main.rs
todo-ui/src/components/: app.rs  todo_modal.rs
todo-ui/src/models/: mod.rs
todo-ui/src/service/: todo_service.rs
