[package]
name = "todo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "env-filter", "json"] }
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.35", features = ["serde"] }

[[bin]]
name = "get-todos"
path = "src/bin/faas/get_todos.rs"
test = false

[[bin]]
name = "get-todo"
path = "src/bin/faas/get_todo.rs"
test = false

[[bin]]
name = "add-todo"
path = "src/bin/faas/add_todo.rs"
test = false

[[bin]]
name = "edit-todo"
path = "src/bin/faas/edit_todo.rs"
test = false

[[bin]]
name = "delete-todo"
path = "src/bin/faas/delete_todo.rs"
test = false