[package]
name = "todo-api"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "env-filter", "json"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "chrono", "uuid", "macros" ] }
http = "1.2.0"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors"] }

[[bin]]
name = "get-todos"
path = "src/bin/faas/get_todos.rs"
test = false

[[bin]]
name = "get-todo"
path = "src/bin/faas/get_todo.rs"
test = false

[[bin]]
name = "add-todo"
path = "src/bin/faas/add_todo.rs"
test = false

[[bin]]
name = "edit-todo"
path = "src/bin/faas/edit_todo.rs"
test = false

[[bin]]
name = "delete-todo"
path = "src/bin/faas/delete_todo.rs"
test = false